@@ -181,6 +181,7 @@ AC_OUTPUT(Makefile
           Drivers/Makefile
           Drivers/AROS/Makefile
           Drivers/Common/Makefile.common
+          Drivers/Device/Makefile
           Drivers/EMU10kx/Makefile
           Drivers/Filesave/Makefile
           Drivers/Void/Makefile
@@ -188,5 +189,6 @@ AC_OUTPUT(Makefile
 	  Examples/Device/PlayTest/Makefile
 	  Examples/Extras/CloneAudioModes/Makefile
 	  Examples/Low-level/PlaySineEverywhere/Makefile
+	  Examples/Low-level/ScanAudioModes/Makefile
           Include/Makefile,
           echo timestamp > stamp-h)
